# competitions

./: 2021-01-28-minpath.py  Cargo.toml  Makefile  README.md  bin_concat.py
algebra/: all-binary-codes-of-size-k.py  broken-calculator.py  combination-sum-iv.py  count-nice-pairs-in-an-array.py  evaluate-reverse-polish-notation.cpp  generate-random-point-in-a-circle.py  next-permutation.py  ones-and-zeroes.py  reordered-power-of-2.py  sum-of-floored-pairs.py  xorqueries.py
array/: brick-wall.py  get-biggest-three-rhombus-sums-in-a-grid.py  k-inverse-pairs-array.rs  maximum-element-after-decreasing-and-rearranging.py  n-queen.py  number-of-submatrices-that-sum-to-target.py  rotate-image.py  stone-game-vii.rs  subarray-sum-equals-k.py
data_structure/: binary-tree-right-side-view.py  linked-list-cycle.py  peeking-iterator.py  reorder_list.cpp
geometry/: valid-triangle-number.js
graph/: bridges.py  detect_cycle.py  dominant.py  is-graph-bipartite.py  longest-increasing-path-in-a-matrix.py  minimum-cost-to-reach-destination-in-time.py  pacific-atlantic-water-flow.py
leetcode/: implement-strstr  minimum-number-of-operations-to-make-array-continuous.py
list/: advantage-shuffle.py  candy.cpp  count-of-smaller-numbers-after-self.py  find-peak-element.cpp  jump-game-vi.go  jump-game-vi.py  linked-list-cycle.py  maximum-erasure-value.py  min_make_array.py  minimum-number-of-refueling-stops.rs  number-of-subarrays-with-bounded-maximum.rs  palindrome-linked-list.py  russian-doll-envelopes.py  score-of-parentheses.py
other/: best-time-to-buy-and-sell-stock-ii.py  (+9 more)
(+158 files in other folders)
