[package]
name = "leetcode"
version = "0.1.0"
authors = ["Quentin Fortier <qpfortier@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[example]]
name = "implement-strstr"
path = "string/implement-strstr.rs"